# pubvis

./: .env  .gitignore  README.md  activate.sh  config.py  manage.py  pyproject.toml  requirements.txt
assets/pubmed/: vectorizer.pkl
frontend/: .eslintrc.cjs  .prettierrc.json  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  index.html  main.ts
frontend/src/assets/: _base.scss  main.scss
frontend/src/components/: About.vue  DonutChart.vue  Explore.vue  History.vue  ItemDetail.vue  ItemList.vue  NavBar.vue  Recommended.vue  Search.vue
frontend/src/components/icons/: IconThumbsDown.vue  IconThumbsUp.vue
frontend/src/components/models/: types.ts
frontend/src/components/utils/: DependencyInjection.ts  HistoryStore.ts  helpers.ts
src/: __init__.py  db.py  main.py  models.py  nlputils_dict_utils.py  nlputils_features.py  update_db.py  views.py
src/static/.sass-cache/0eae96225fd7574379362bc4811765156117f33b/: _utilities.scssc
src/static/.sass-cache/3e0371ebd768d01fe57de05df023e665c0a1866d/: _animation.scssc  _appearance.scssc  _background-clip.scssc  _background-origin.scssc  _background-size.scssc  _border-radius.scssc  _box-shadow.scssc  _columns.scssc  _filter.scssc  _flexbox.scssc  _font-face.scssc  _hyphenation.scssc  _images.scssc  _inline-block.scssc  _opacity.scssc  _regions.scssc  _text-shadow.scssc  _transform.scssc  _transition.scssc  _user-interface.scssc
src/static/.sass-cache/5ddfffa76625c2fb2a7c4de1e1a5ca47ba693e57/: _article.scssc  _core.scssc  _filter.scssc  _header.scssc  _search-results.scssc  _tooltip.scssc  about.scssc  application.scssc
src/static/.sass-cache/d6f9e3a7195b5257453d38c9f43d5733c38a04b1/: _css3.scssc  _reset.scssc
src/static/assets/arxiv/: vectorizer.pkl
src/static/assets/pubmed/: vectorizer.pkl
src/static/css/: application.css
src/static/html/: about.html  index.html
src/static/js/: controller-explorer.js  two.js  ui.js  visdata.js
src/static/json/arxiv/: item_info.json  xyc.json
src/static/json/pubmed/: item_info.json  xyc.json
src/static/scss/: _compare.scss  about.scss
src/templates/: about.html  index.html
src/utils/: download_articles.py  setup.py
tests/: test_main.py  test_views.py
